--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+8
+version: 1.0.2+9
 
 environment:
   sdk: ^3.9.0
@@ -45,6 +45,7 @@ dependencies:
   camera: ^0.11.0+1 # Para acceder a la cámara
   carousel_slider: ^5.1.1 # Para carousel de imágenes
   connectivity_plus: ^6.0.3 # Para chequear conexión a Internet
+  file_picker: ^10.3.2
   flutter_device_imei: ^0.0.4
   flutter_svg: ^2.2.0
   font_awesome_flutter: ^10.1.0
@@ -66,6 +67,7 @@ dependencies:
   firebase_core: ^4.2.0
   flutter_local_notifications: ^19.4.2
   sqflite: ^2.0.2
+  url_launcher: ^6.1.15 # Para llamar por teléfono
 
 dependency_overrides:
   dynamic_color: ^1.8.1
